--- a/src/main/webapp/form.html
+++ b/src/main/webapp/form.html
@@ -5,8 +5,14 @@
     <title>Insert title here</title>
 </head>
 <body>
-    <form>
-
-    </form>
+<form action="/" method="Post">
+    用户名： <input type="text" name="username"><br/>
+    密&nbsp;&nbsp;&nbsp;码 <input type="password" name="password">
+    <br/>
+     爱好：
+    <input type="checkbox" name="hobby" value="sing">唱歌
+    <input type="checkbox" name="hobby" value="sing">唱歌
+    <input type="checkbox" name="hobby" value="sing">唱歌
+</form>
 </body>
 </html>
