--- a/src/main/webapp/form.html
+++ b/src/main/webapp/form.html
@@ -11,8 +11,8 @@
     <br/>
      爱好：
     <input type="checkbox" name="hobby" value="sing">唱歌
-    <input type="checkbox" name="hobby" value="sing">唱歌
-    <input type="checkbox" name="hobby" value="sing">唱歌
+    <input type="checkbox" name="hobby" value="dance">跳舞
+    <input type="checkbox" name="hobby" value="football">足球
 </form>
 </body>
 </html>
