--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" 
+                           "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Insert title here</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Insert title here</title>
 </head>
 <body>
-<!--把表单内容提交到chapter04工程下的LoginServlet-->
-<form action="/LoginServlet" method="post">
-    用户名： <input type="text" name="username"/><br>
-    密 &nbsp;&nbsp;&nbsp;码： <input type="password" name="password"/><br>
-    <input type="submit" value="登录"/>
-</form>
+	<form name="reg" action="/LoginServlet" method="post">
+		用户名: <input name="username" type="text" /><br/>
+		密&nbsp;&nbsp;码：<input name="password" type="password" /><br/>
+		验证码：<input type="text" name="check_code"> 
+               <img src="/CheckServlet"><br>
+			    <input type="submit" value="提交" id="bt" />
+	</form>
 </body>
 </html>
